Lessons/Lesson 9 - Networking/9.4 - Network Policies - Namespaces/busybox-np-ns.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox-np-ns
  namespace: np-ns
  labels:
    app: sleepy
spec:
  containers:
  - name: np-ns
    image: busybox
    command:
    - sleep
    - "3600"
