Lessons/Lesson 9 - Networking/9.4 - Network Policies - Namespaces/nginx-default.yaml
apiVersion: v1
kind: Pod
metadata:
  name: np-nginx
  namespace: default
  labels: 
    app: np-nginx
spec:
  containers:
  - name: np-nginx
    image: nginx:latest
